Hero component started

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,8 @@
 
 * {
   scroll-behavior: smooth;
+  color: var(--light-font);
+  background-blend-mode: ;
 }
 
 .text-gradient {
@@ -89,10 +91,6 @@
     rgba(255, 255, 255, 0) -341.94%,
     #14101d 95.11%
   );
-}
-
-.bg-discount-gradient {
-  background: linear-gradient(125.17deg, #272727 0%, #11101d 100%);
 }
 
 .box-shadow {
