--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,10 @@
   color: var(--light-font);
 }
 
+div.feedback-card:hover {
+  background-color: var(--light-frame);
+}
+
 .text-gradient {
   /** TEXT GRADIENT */ color: #fa754d; background-image: -webkit-linear-gradient(0deg, #fa754dbb 0%, #d96845 33%, #bd552fbe 66%); background-clip: text; -webkit-background-clip: text; -webkit-text-fill-color: transparent;
 }
@@ -100,6 +104,10 @@
 .sidebar {
   -webkit-animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+div.feature-card:hover {
+  background-color: var(--light-frame);
 }
 
 @-webkit-keyframes slide-top {
